Fixed scrollbar issue making page smaller.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,9 @@
 	padding: 0;
 	margin: 0;
 }
+html {
+  scrollbar-gutter: stable both-edges;
+}
 body {
 	padding: 20px;
 	color: #333;
